--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h<!DOCTYPE html>
     <div class="top-container">
         <h1>I'm Rakshana</h1>
         <h2 class="sub">a web developer</h2>
-        <img class="summer" src="images/beach.png" alt="summer">
+        <img class="summer" src="images/—Pngtree—golden beach_5616388.png" alt="summer">
 
     </div>
     <div class="middle-container">
@@ -27,12 +27,12 @@ h<!DOCTYPE html>
         <div class="skills">
             <h2>My Skills</h2>
             <div class="row">
-                <img class="dev" src="images/dev.png" alt="Development">
+                <img class="dev" src="images/—Pngtree—children s software programming_5401259.png" alt="Development">
                 <h3>Design & Development</h3>
                 <p>I started coding at the age of 17. I like to solve complex problems. I'm passionate about web designing.</p>
             </div>
             <div class="row">
-                <img class="books" src="images/books.png" alt="books">
+                <img class="books" src="images/—Pngtree—magic potion story book cartoon_4379512.png" alt="books">
                 <h3>Books</h3>
                 <p class="books-p">I love to read books. Whenever I read a novel I feel like I have been transported to another world.</p>
             </div>
